--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>彩色大树生长动画</title>
     <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="js/drawTree.js"></script>
+    <style>
+        html,body{
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        *{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
 
